--- a/README
+++ b/README
@@ -3,7 +3,7 @@
 = Installing Google-Translate
 
 == Installing the Gem
-
+    $ sudo gem sources -a http://gems.github.com
     $ sudo gem install google-translate
 
 == Usage
