--- a/README
+++ b/README
@@ -4,7 +4,7 @@
 
 == Installing the Gem
     $ sudo gem sources -a http://gems.github.com
-    $ sudo gem install google-translate
+    $ sudo gem install shvets-google_translate
 
 == Usage
 
