--- a/CHANGES
+++ b/CHANGES
@@ -48,3 +48,7 @@
 == Version 0.8.6
 
 * Fix auto detect source language; fix countries list; refactoring code
+
+== Version 0.8.7
+
+* Changes in project configuration
